mysql insert details

--- a/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
+++ b/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
@@ -26,6 +26,8 @@ desc mytable;
 show create table mytable;
 //修改表结构
 ALTER TABLE `mytable` ADD COLUMN `add_column` VARCHAR(256) COMMENT '添加的列' after device_id;
+//表添加主键
+Alter table tb add primary key(id);
 //修改表名
 ALTER  TABLE table_name RENAME TO new_table_name
 ```
