--- a/_posts/java/集合/2018-12-23-Vector源码阅读.md
+++ b/_posts/java/集合/2018-12-23-Vector源码阅读.md
@@ -197,10 +197,10 @@ grow方法中:
 
 由于Vector内部使用数组实现,因此源码并不复杂.
 
-同时,在学习源码的过程中我们可以发现,很多对数组进行操作的方法使用`synchronized`修饰,因此可以保证县城安全性,同时,`synchronized`会加锁,因此效率可能会相对于ArrayList低一些,在单线程的情况下建议还是使用ArrayList.
+同时,在学习源码的过程中我们可以发现,很多对数组进行操作的方法使用`synchronized`修饰,因此可以保证线程安全性,同时,`synchronized`会加锁,因此效率可能会相对于ArrayList低一些,在单线程的情况下建议还是使用ArrayList.
 
 
-##参考链接
+## 参考链接
 
 http://wiki.jikexueyuan.com/project/java-enhancement/java-twentynine.html
 
