用栈实现队列

--- a/_posts/数据结构和算法/每日一题/2018-12-27-[随缘一题]有效的三角形.md
+++ b/_posts/数据结构和算法/每日一题/2018-12-27-[随缘一题]有效的三角形.md
@@ -1,12 +1,11 @@
 ---
 layout: post
-category: [数据结构及算法,随缘一题,LintCode,数据结构]
+category: [随缘一题,LintCode,数据结构]
 featured: true
 tags:
   - 算法
   - 随缘一题
   - LintCode
-  - 数据结构
 ---
 
 ## 来源
