--- a/_posts/数据结构和算法/每日一题/链表/2019-01-04-[随缘一题]删除排序链表中的重复元素.md
+++ b/_posts/数据结构和算法/每日一题/链表/2019-01-04-[随缘一题]删除排序链表中的重复元素.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-category: [随缘一题,LintCode,算法]
+category: [随缘一题,LintCode,算法,链表]
 featured: true
 tags:
   - 算法
   - 随缘一题
   - LintCode
+  - 链表
 ---
 
 
