[设计模式]装饰者模式

--- a/_posts/开发者手册/设计模式/2019-01-06-[设计模式]-策略模式.md
+++ b/_posts/开发者手册/设计模式/2019-01-06-[设计模式]-策略模式.md
@@ -233,7 +233,7 @@ public void test(){
 ![](http://img.couplecoders.tech/markdown-img-paste-20190107001809446.png)
 
 
-可以看到,在测试代码中,我们首先new了一个骑士,然后调用他的攻击方法,由于在`Character`中我们设置的默认武器为`Sword`,因此打印了`knight使用sword攻击`,之后我们调用`setWeapon()`方法,给骑士更换了武器,换为了长毛`Spear`,再次调用`attack()`,打印了`knight使用spear进行了攻击`.
+可以看到,在测试代码中,我们首先new了一个骑士,然后调用他的攻击方法,由于在`Character`中我们设置的默认武器为`Sword`,因此打印了`knight使用sword攻击`,之后我们调用`setWeapon()`方法,给骑士更换了武器,换为了长矛`Spear`,再次调用`attack()`,打印了`knight使用spear进行了攻击`.
 
 
 ## 策略模式的优缺点
