[数据结构和算法]面试常用算法总结

--- a/_posts/数据结构和算法/每日一题/数组/2019-01-05-[随缘一题]合并排序数组II.md
+++ b/_posts/数据结构和算法/每日一题/数组/2019-01-05-[随缘一题]合并排序数组II.md
@@ -11,7 +11,7 @@ tags:
 
 ## 来源
 
-<a href="https://www.lintcode.com/problem/merge-two-sorted-arrays/description">lintcode-合并排序数组 II
+<a href="https://www.lintcode.com/problem/merge-two-sorted-arrays/description">lintcode-6.合并排序数组 II
 </a>
 
 ## 描述
