--- a/_posts/数据结构和算法/堆/2019-01-15-数据结构之堆.md
+++ b/_posts/数据结构和算法/堆/2019-01-15-数据结构之堆.md
@@ -196,6 +196,27 @@ public class MaxHeap {
 
 ```
 
+## 时间复杂度分析
+
+#### 建堆
+
+建堆有两种方案:
+1. 逐一插入法. 时间复杂度为O(nlogn)
+2. 父节点逐一调整. 时间复杂度为O(n)
+
+对于第二点的证明:
+
+有n个节点,堆的高度为`H=logn`,那么对于最后一行的父节点,最多下沉一次,对于倒数第二行的父节点,最多下沉2次.....父节点最多下沉`H`次.
+
+所以:
+`s = 1 * 2^(H-1) + 2 * 2^(H-2) + ... + (H-1) * 2^1 + H * 2^0`
+
+带入H后可以算的O(n).
+
+#### 插入和删除
+
+插入和删除都是对一个元素的调整,上浮或者下沉最多`logn`次.因此插入删除的时间复杂度为:`O(logn)`.
+
 完。
 
 <br>
@@ -203,6 +224,7 @@ public class MaxHeap {
 <br>
 <h4>ChangeLog</h4>
 2019-01-15 完成
+2019-01-16 添加时间复杂度分析
 <br>
 <br>
 
