--- a/_posts/数据结构和算法/排序/2019-01-13-面试常用排序算法总结.md
+++ b/_posts/数据结构和算法/排序/2019-01-13-面试常用排序算法总结.md
@@ -778,9 +778,9 @@ public int[] sort(int[] input) {
 
 看代码可以发现,这三种排序都用到了桶.
 
-基数排序: 桶固定为10个,用来防止当前位等于桶下标的数字.
+基数排序: 桶固定为10个,用来放置当前位等于桶下标的数字.
 
-基数排序: 每个桶只有一个数字,桶的数量为所有元素的数量.
+计数排序: 每个桶只有一系列相同的数字,桶的数量为最大元素减去最小元素的数量.
 
 桶排序: 每个桶放置一定范围内的数字,具体范围可以自定义.
 
