--- a/_posts/数据结构和算法/排序/2019-01-16-TOP-K问题.md
+++ b/_posts/数据结构和算法/排序/2019-01-16-TOP-K问题.md
@@ -21,7 +21,7 @@ TOP-K问题是面试中的常见题型,具体表现为:
 
 <h2 id="yilai">依赖</h2>
 
-此文中会依赖到<a href="{{ site.baseurl }}/算法/排序/java面试/2019/01/13/面试常用排序算法总结/">快速排序,堆排序</a>等排序算法,以及<a href="{{ site.baseurl }}/数据结构/堆/2019/01/15/数据结构-堆/">数据结构堆</a>.
+此文中会依赖到<a href="{{ site.baseurl }}/算法/排序/java面试/2019/01/13/面试常用排序算法总结/">快速排序,堆排序</a>等排序算法,以及<a href="{{ site.baseurl }}/数据结构/堆/2019/01/15/数据结构之堆/">数据结构堆</a>.
 
 如果你对上述两者的原理有所了解,可以继续往下看.如果不了解,可以点击链接先看一下基础~.
 
@@ -87,6 +87,9 @@ TOP-K问题是面试中的常见题型,具体表现为:
 两部分相加,即是所求的`前1000个数据`.
 
 在这个过程中,时间复杂度为:`O(n)logn`.
+
+<font color="red">更正</font>:
+时间复杂度为:`O(n)`.
 
 
 ## 总结
@@ -246,6 +249,13 @@ public class MinHeap {
 3. 若切分后的左子树组的长度 s < k, 则左子数组为前s大元素,在右子数组中寻找前k-s大元素.
 
 时间复杂度为:`O(nlogK)`.
+
+<font color="red">更正</font>:
+
+经"灰灰是菇凉"提醒: 此处的时间复杂度为:`O(n)`.
+
+快速选择算法中:花费时间为:`n + n/2 + n/4 + ... + n/n`(极限情况,k=1) = `n(1+ 1/2 + 1/4 + ...+ 1/n)` < `O(2n)` = `O(n)`.
+
 
 实现代码:
 
