update css italiy to normal

--- a/_posts/java/2019-01-20-使用自定义注解实现接口参数校验.md
+++ b/_posts/java/2019-01-20-使用自定义注解实现接口参数校验.md
@@ -12,7 +12,7 @@ tags:
 
 在接口的开发中,我们有时会想让**某个接口只可以被特定的人(来源)请求**,那么就需要在服务端对请求参数做校验.
 
-这种情况我们可以使用`interceptor`来统一进行参数校验,但是如果很多个接口,有不同的的设定值,我们总不能写很多个`interceptor`,然后按照patn逐一添加吧?
+这种情况我们可以使用`interceptor`来统一进行参数校验,但是如果很多个接口,有不同的的设定值,我们总不能写很多个`interceptor`,然后按照path逐一添加吧?
 
 面对这种情况,我们可以选择自定义一个注解,由注解来告诉我们,这个接口允许的访问者是谁.
 
