--- a/_posts/java/2019-01-29-Java的序列化与反序列化.md
+++ b/_posts/java/2019-01-29-Java的序列化与反序列化.md
@@ -239,14 +239,13 @@ private void readObject(java.io.ObjectInputStream s)
 
 ##### 5.静态变量是不会序列化的,因为序列化的是`对象`,而静态变量属于`类`.
 
-##### 6.可以参考ArrayList的实现方法实现自己的自定义序列化,在这个自定义的过程中,可以做许多事情,比如对某些字段加密(常用语密码字段).
+##### 6.可以参考ArrayList的实现方法实现自己的自定义序列化,在这个自定义的过程中,可以做许多事情,比如对某些字段加密(常用于密码字段).
 
 
 
 ## 参考链接
 https://www.ibm.com/developerworks/cn/java/j-lo-serial/index.html
 https://www.hollischuang.com/archives/1140
-
 
 
 完.
@@ -257,7 +256,7 @@ https://www.hollischuang.com/archives/1140
 <br>
 <br>
 <h4>ChangeLog</h4>
-2019-01-28   
+2019-01-28   完成
 <br>
 <br>
 
