--- a/_posts/开发者手册/设计模式/2019-01-11-[设计模式]-一句话总结设计模式与应用场景.md
+++ b/_posts/开发者手册/设计模式/2019-01-11-[设计模式]-一句话总结设计模式与应用场景.md
@@ -33,6 +33,15 @@ JDK 中的Swing中大量使用了观察者模式
 
 java.io包内的读取文件内容的一系列类,如FileInputStream等.
 
+## 单例模式
+
+**通过私有化构造方法,对外提供唯一实例的全局访问方法来实现某个类只有一个实例,在实现过程中需要注意延迟加载及线程安全问题.**
+
+### 应用场景
+
+Windows系统的回收站,任务管理器,系统中的配置信息读取,各种连接池的管理.
+
+
 
 完。
 
@@ -42,6 +51,7 @@ java.io包内的读取文件内容的一系列类,如FileInputStream等.
 <br>
 <h4>ChangeLog</h4>
 2019-01-11 完成
+2019-01-31 添加单例模式
 <br>
 <br>
 
