--- a/_posts/开发者手册/设计模式/2019-01-31-单例模式的N种写法.md
+++ b/_posts/开发者手册/设计模式/2019-01-31-单例模式的N种写法.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-category: [开发者手册,设计模式,Java]
+category: [开发者手册,设计模式,Java,Java面试]
 tags:
   - 开发者手册
   - 设计模式
   - Java
+  - Java面试
 ---
 ## 1.前言
 
@@ -21,13 +22,14 @@ tags:
 ## 3.实现思路
 
 1.构造方法私有化.
+
 2.提供静态的方法,返回唯一实例.
 
 这块很好理解,要想保证只有唯一实例,构造方法就不能被别人调用,只能自己调用用来创建唯一的实例,同时,将构造方法私有化了,就需要对外提供一个访问点,以方便其他类获取这个实例.
 
 ## 4.具体实现
 
-###4.1 饿汉式
+### 4.1 饿汉式
 
 这种写法的优势就是,真的简单,基本就是👆的实现思路的耿直实现,代码如下:
 
