--- a/_private_article/面试/个人简历.md
+++ b/_private_article/面试/个人简历.md
@@ -15,10 +15,10 @@
 
 * 熟练掌握Java语言,熟悉面对对象系统设计,熟悉设计模式,有良好的编码习惯
 - 熟练掌握SpringMVC,Spring boot,Mybatis等常用开发框架,并对其实现原理有一定了解
-- 熟练掌握Mysql数据库,对数据库的设计,存储,查询优化有一定经验
-- 熟练使用IDE,git,Maven等开发,构建,部署工具
+- 熟练掌握Mysql数据库及SQL语言,对关系型数据库的设计,存储,查询优化有一定经验
+- 熟练使用IDE,git,Maven,Docker等开发,构建,部署工具
 - 熟练使用Redis及Hbase等NoSQL数据库
-- 了解Linux系统及Shell语言,熟练使用Ubuntu进行开发,能够编写常用的Shell脚本
+- 了解Linux系统及Shell语言,熟练使用Ubuntu进行开发,维护公司及个人服务器,能够编写常用的Shell脚本
 - 了解常用的常用的中间件,有使用经验
 
 <h4 style="margin-top:-10px;margin-bottom:10px">项目经验</h4>
@@ -28,7 +28,13 @@
 职责: 提供了多端使用的API,并进行了多个版本的迭代.期间对项目进行了一次较大的重构,极大的提升了系统响应速度(平均响应时间由4s下降到1s).同时让系统更加的可维护与可扩展(维护及迭代人员由2人全职降为1人兼职).  
 **2.用户成长体系**  
 项目简介: 用户的签到,任务,成就等一系列成长体系,目前接入了移动端及手表端.  
-职责: 项目开发过程中,积极推动项目进展,多部门合作实现了一期需求,独立实现了成长系统并将其平台化,方便后续多端接入.对项目中的并发场景进行优化,保证项目的健壮.  
+职责: 项目开发过程中,积极推动项目进展,多部门合作实现了一期需求,独立实现了成长系统并将其平台化,方便后续多端接入.优化了项目中的并发场景(签到),确保项目的健壮.对该项目中的数据表(任务记录)进行了水平切分,提高了查询效率.  
 **3.基于兴趣的社区个性化推荐**  
-项目简介:基于标签的社区帖子个性化推荐,实现了根据用户行为反馈数据,个性化推荐社区精选帖子,提高了用户停留时长,及用户留存率.  
+项目简介:基于标签的社区帖子个性化推荐,实现了根据用户行为反馈数据,个性化推荐社区精选帖子,提高了用户停留时长(53s至1分20s),及用户留存率(7日留存25%至33%).  
 职责:实现了用户的实时反馈计算及帖子推荐部分,解决了数据的存储与索引,帖子的排序,用户浏览记录的过滤等问题.
+
+<h4 style="margin-top:-10px;margin-bottom:10px">个人优势</h4>
+
+扎实的编程基础,持续的学习热情及快速学习的能力  
+
+感谢您的查阅,期待与您共事.
