--- a/_posts/数据结构和算法/数组/2019-03-17-详解二分查找.md
+++ b/_posts/数据结构和算法/数组/2019-03-17-详解二分查找.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-category: [随缘一题,算法,数组]
+category: [随缘一题,算法,数组,笔试面试]
 featured: true
 tags:
   - 算法
   - 随缘一题
   - 数组
+  - 笔试面试
 ---
 
 ## 前言
