模板方法设计模式

--- a/_posts/开发者手册/设计模式/2019-01-11-[设计模式]-一句话总结设计模式与应用场景.md
+++ b/_posts/开发者手册/设计模式/2019-01-11-[设计模式]-一句话总结设计模式与应用场景.md
@@ -41,7 +41,23 @@ java.io包内的读取文件内容的一系列类,如FileInputStream等.
 
 Windows系统的回收站,任务管理器,系统中的配置信息读取,各种连接池的管理.
 
+## 责任链模式
 
+**使多个对象都有机会处理请求,从而避免请求的发送者与接受者之间的耦合关系. 将多个接受者连成一条链,沿着该链处理请求,直到请求被处理为止.**
+
+## 应用场景
+
+参数的检查,spring的filter,OA系统的审批
+
+## 模板方法模式
+
+**在一个方法中定义一个算法的骨架,而将一些详细的步骤延迟到子类中.**
+
+模板方法使得子类可以在不改变算法结果的基础上,重新定义算法中的某些步骤.
+
+## 应用场景
+
+模板方法使用场景较为丰富,在类的公共父类中都有一些体现.
 
 完。
 
