--- a/_posts/开发者手册/设计模式/2019-03-19-[设计模式]-责任链模式.md
+++ b/_posts/开发者手册/设计模式/2019-03-19-[设计模式]-责任链模式.md
@@ -11,7 +11,7 @@ tags:
 ---
 ## 1.介绍
 
-使多个对象都有机会处理请求,从而避免请求的发送者与接受者之间的耦合关系. 将多个接受者连成一条链,沿着该链处理请求,知道请求被处理为止.
+使多个对象都有机会处理请求,从而避免请求的发送者与接受者之间的耦合关系. 将多个接受者连成一条链,沿着该链处理请求,直到请求被处理为止.
 
 ## 类图
 
