--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -12,11 +12,26 @@ multilingual: true
 <br/>
 因此想给博客添加一个搜索功能.  
 <br/>
+
+
+<input> wode</input>
+
+## 方法一
+
+我自己后端实现的一个搜索.
+
+在上方输入框输入回车即可.
+
+
+
+
+## 方法二
+
 Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 <br/>
-而我完全不擅长写JS,只好去网上找现成的轮子,所幸发现了一个还不错的,使用简单效果还不错.具体文章链接戳<a href="https://blog.csdn.net/dliyuedong/article/details/50539709">这里</a>
+而我完全不擅长写JS,只好去网上找现成的轮子,所幸发现了一个还不错的,使用简单效果还不错.具体文章链接戳<a href="https://blog.csdn.net/dliyuedong/article/details/50539709">这里是个传送门</a>
 <br/>
-<h2 > 使用方法:</h2>
+<h3 > 使用方法:</h3>
 
 点击首页右下角的放大镜图标
 
