--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -14,7 +14,10 @@ multilingual: true
 <br/>
 
 
-<input> wode</input>
+<input name="target" id="target" onkeyup="f1(event)"/> 搜索框(在这里输入后回车)
+
+
+<div id="result">
 
 ## 方法一
 
@@ -37,5 +40,55 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 
 或者双击`ctrl`键.然后输入查找的关键字,目前只支持在文章名检索.
 
+</div>
 
+<div>
+	<div class="post-preview">
+		<a href="/thrift/rpc/2019/03/28/Thrift%E5%85%A5%E9%97%A8%E5%8F%8A-Java-%E5%AE%9E%E7%8E%B0%E7%AE%80%E5%8D%95Demo/">
+			<h2 class="post-title">
+				Thrift入门及 Java 实现简单demo
+			</h2>
+			
+			<div class="post-content-preview">
+				
+					本文示例代码: github传送门
+	
+	本文并未与spring boot集成,仅实现了demo.可以将本文中的类作为spring中的bean使用即可.
+	
+	其实一开始是想集成的,后来发现thrift已经够头大了,就暂时放弃了,后面单独写一篇吧.集成比较简单一些.
+	
+	背景介绍
+	
+	我终于从一个写Http接口的转职到了写RPC接口的.(微笑)
+	
+	所以我需要学习一下RPC框架,至于为什么学习Thrift...
+				
+			</div>
+		</a>
+		<p class="post-meta">
+			Posted by 呼延十 on March 28, 2019
+		</p>
+	</div>
+</div>
 
+<!-- <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
+
+<script type="text/javascript">
+	//请求函数
+	function f1(event){
+		if (event.keyCode != 13 ) { //回车键是13 
+			return false;
+		}
+		alert(222)
+		var target1  = document.getElementById("target");
+		$.ajax({
+			url: "http://localhost:9999/blog/search?target=" + target1.value ,
+			type: "GET",
+			dataType: 'jsonp',
+			success: function(data) {
+				// data = jQuery.parseJSON(data);  //dataType指明了返回数据为json类型，故不需要再反序列化
+				alert(data);
+			}
+		});
+	}
+</script>
