--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -19,14 +19,12 @@ multilingual: true
 
 <div id="result">
 
+
 ## 方法一
 
 我自己后端实现的一个搜索.
 
 在上方输入框输入回车即可.
-
-
-
 
 ## 方法二
 
@@ -42,7 +40,7 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 
 </div>
 
-<div>
+<!-- <div>
 	<div class="post-preview">
 		<a href="/thrift/rpc/2019/03/28/Thrift%E5%85%A5%E9%97%A8%E5%8F%8A-Java-%E5%AE%9E%E7%8E%B0%E7%AE%80%E5%8D%95Demo/">
 			<h2 class="post-title">
@@ -51,27 +49,15 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 			
 			<div class="post-content-preview">
 				
-					本文示例代码: github传送门
-	
-	本文并未与spring boot集成,仅实现了demo.可以将本文中的类作为spring中的bean使用即可.
-	
-	其实一开始是想集成的,后来发现thrift已经够头大了,就暂时放弃了,后面单独写一篇吧.集成比较简单一些.
-	
-	背景介绍
-	
-	我终于从一个写Http接口的转职到了写RPC接口的.(微笑)
-	
-	所以我需要学习一下RPC框架,至于为什么学习Thrift...
+			我的
 				
 			</div>
 		</a>
-		<p class="post-meta">
-			Posted by 呼延十 on March 28, 2019
-		</p>
-	</div>
-</div>
 
-<!-- <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
+	</div>
+</div> -->
+
+<!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script> -->
 
 <script type="text/javascript">
 	//请求函数
@@ -79,15 +65,51 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 		if (event.keyCode != 13 ) { //回车键是13 
 			return false;
 		}
-		alert(222)
 		var target1  = document.getElementById("target");
+		// $.getJSON("http://localhost:9999/blog/search?target=" + target1.value + "&callback=?", function(date){
+		// 	alert(222);
+		// });
+		var divResult = document.getElementById("result");
+
+		var newResultDiv = document.createElement('div');
 		$.ajax({
-			url: "http://localhost:9999/blog/search?target=" + target1.value ,
+			url: "http://localhost:8090/blog/search?target=" + target1.value,
 			type: "GET",
-			dataType: 'jsonp',
+			dataType: "json",
 			success: function(data) {
-				// data = jQuery.parseJSON(data);  //dataType指明了返回数据为json类型，故不需要再反序列化
-				alert(data);
+				//拿到了title
+				var i = 0;
+
+				data.forEach((item)=>{
+					var article = document.createElement('div');
+					article.id = "result" + i;
+					i = i + 1;
+
+					var a = document.createElement('a');
+					a.href=item.url;
+
+					var h3 = document.createElement('h3');
+					h3.innerText = item.title;
+					a.appendChild(h3);
+
+					var p = document.createElement('p');
+					console.log(target1.value);
+					console.log(item.targetStr.replace(target1,'hahah'));
+					var redTarget = "<font color=\"red\">" + target1.value + "</font>";
+					p.innerHTML = "..."   +  item.targetStr.replace(target1.value,redTarget) + "...";
+					a.appendChild(p);
+
+					article.appendChild(a);
+
+					console.log(article.innerHTML);
+
+					newResultDiv.appendChild(article);
+					// document.body.appendChild(divResult);
+				});
+				divResult.innerHTML=newResultDiv.innerHTML;
+			},
+			error: function(){
+				alert("wrong");
 			}
 		});
 	}
