--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -75,9 +75,11 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 		$.ajax({
 			url: "http://localhost:8090/blog/search?target=" + target1.value,
 			type: "GET",
-			dataType: "json",
+			dataType: "jsonp",
+			jsonp:"callback",
 			success: function(data) {
 				//拿到了title
+				console.log(12);
 				var i = 0;
 
 				data.forEach((item)=>{
