--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -73,7 +73,7 @@ Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 
 		var newResultDiv = document.createElement('div');
 		$.ajax({
-			url: "http://localhost:8090/blog/search?target=" + target1.value,
+			url: "http://huyan.couplecoders.tech:8090/blog/search?target=" + target1.value,
 			type: "GET",
 			dataType: "jsonp",
 			jsonp:"callback",
