--- a/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
@@ -1,34 +1,36 @@
 ---
 layout: post
-category: [开发者工具,效率编程]
+category: [Linux,vim,效率编程]
 tags:
-  - 开发者工具
+  - Linux
+  - Vim
   - 效率编程
 ---
 
-## 背景介绍
-
-之前稍微记录过一些VIM的操作,但是太过于简单了,而最近换了个工作,编辑文本的地方比较多,且多在服务器上编辑,使用编辑器不太方便, 因此加强对VIM的学习.
-
-
-
-## 快捷键
-
-快捷键 | 作用 | 备注 
+快捷键 | 作用 | 备注
 --- | --- | ---
+删除当前行 | `dd`
+查找某个内容 | `/content` | 使用`n`下一个,`N`上一个
+保存离开 | `ZZ`
+复制粘贴 |`y` `p`
+撤回上一次操作 | `u`
+移动到单词末尾 | `e`
+移动到行末 | `$`
+跳转至最后一行 | `G`
 
-## 
 
+<br>
+完。
 
 <br>
 <br>
 <br>
 <br>
 <h4>ChangeLog</h4>
-2019-03-28      完成
+2019-01-11 完成
+2019-04-02 格式重构
 <br>
 <br>
-
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
 
