--- a/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
+++ b/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
@@ -141,7 +141,7 @@ echo $result
 - [ ] ha
 
 
-```mermaid
+```
 graph LR
 A[IT部门/行政部]-->|员工工号|B((KS-F3))
 B-->|电话机/电脑|A
@@ -154,6 +154,14 @@ F-->|工作介绍|D
 H[HR]-.->|员工工号|B
 D-.->|签合同|H
 ```
+
+{% mermaid %} 
+graph TD
+    B["fa:fa-twitter for peace"]
+    B-->C[fa:fa-ban forbidden]
+    B-->D(fa:fa-spinner);
+    B-->E(A fa:fa-camera-retro perhaps?);
+{% endmermaid %}
 
 
 <br>
