--- a/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
+++ b/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
@@ -141,27 +141,22 @@ echo $result
 - [ ] ha
 
 
-```
-graph LR
-A[IT部门/行政部]-->|员工工号|B((KS-F3))
-B-->|电话机/电脑|A
-B==>C((U66-F1))
-C==>D((U66-F3))
-E[前台]-.->|"门卡(3天后)"|C
-C-->|申请表|E
-D-->|签合同|F[项目经理]
-F-->|工作介绍|D
-H[HR]-.->|员工工号|B
-D-.->|签合同|H
+```mermaid
+graph TB
+    A[四边形]
+    B{菱形}
+    C((圆形))
+    
+    
+    O[图形]
+    O-->|包括|A
+    O-->|包括|B
+    O-->|包括|C
+    
+    B-->|属于|A
+    C---|没啥关系|A
 ```
 
-{% mermaid %} 
-graph TD
-    B["fa:fa-twitter for peace"]
-    B-->C[fa:fa-ban forbidden]
-    B-->D(fa:fa-spinner);
-    B-->E(A fa:fa-camera-retro perhaps?);
-{% endmermaid %}
 
 
 <br>
