--- a/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
+++ b/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
@@ -157,7 +157,13 @@ graph TB
     C---|没啥关系|A
 ```
 
-
+{% mermaid %}
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+{% endmermaid %}
 
 <br>
 <br>
