--- a/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
+++ b/_posts/数据结构和算法/2018-09-15-尾部的0和小老鼠喝药.md
@@ -140,6 +140,8 @@ echo $result
 - [x] wo
 - [ ] ha
 
+<script src="https://unpkg.com/mermaid@7.1.0/dist/"></script>
+
 
 ```mermaid
 graph TB
@@ -164,6 +166,14 @@ graph TD;
     B-->D;
     C-->D;
 {% endmermaid %}
+
+<div class="mermaid">
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+</div>
 
 <br>
 <br>
