add lucene demo

--- a/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
@@ -59,6 +59,35 @@ tags:
 
 ## streams 
 
+本章节的命令签名较长且变化较多,因此不再提供示例命令和方法签名,可以去下面的链接中学习.
+
+[stream相关命令](https://redis.io/commands#stream)
+
+- **XINFO**: 用于检索有关流和关联的消费者组的不同信息.有三种子命令,STREAMS,GROUPS,CONSUMERS.
+
+- **XADD**: 将给定的条目添加到Stream中,如果stream不存在,则以key创建一个Stream.
+
+- **XRANGE**: 从Stream中查找指定范围的条目并返回.
+
+- **XREVRANGE**: **XRANGE**的倒序版本,接受参数也是倒序.
+
+- **XLEN**: 返回Stream中的项目数量.
+
+- **XDEL**: 从Stream删除给定ID的项目.
+
+- **XREAD**: 从一个或者多个Stream中读取数据,仅返回ID大于传入ID的信息.
+
+- **XTRIM**: 将Stream修剪的只保留给定数量的项目,有多种修剪策略,目前只实现了一种.
+
+- **XREADGROUP**:使用消费者组从Stream中读取信息.
+
+- **XACK**:确认已经处理消息.
+
+- **XCLAIM**: 更改消息的所有权,可以是其他消费者来处理此消息,
+
+- **XPENDING**: 查看正在处理的消息的信息.
+
+- **XGROUP**: 创建,销毁,管理消费者组.也有多个子命令,CREATE,SETID,DESTROY,DELCONSUMER.
 
 ## bitmaps
 
