add some linux and idea command

--- a/_drafts/2019-04-12-[Git]-Git常用操作记录.md
+++ b/_drafts/2019-04-12-[Git]-Git常用操作记录.md
@@ -1,18 +1,29 @@
 ---
 layout: post
-category: [开发者工具,效率编程]
+category: [源码阅读,Java,Java集合]
 tags:
-  - 开发者工具
-  - 效率编程
+  - Java
+  - 源码阅读
+  - Java集合
 ---
 
-## 快捷键
+## 前言
 
-快捷键 | 作用 | 备注 
+git常用操作记录备忘.
+
+
+## 命令记录
+
+命令 | 作用 | 备注
 --- | --- | ---
-`command + opt + s` | 全部保存
-`command + d` | 选中光标所在的单词
-`command + p` | 搜索文件 | 还可以输入`:8`跳转到当前文件的8行
+
+
+
+## 参考链接
+
+
+完。
+
 
 
 
@@ -21,9 +32,11 @@ tags:
 <br>
 <br>
 <h4>ChangeLog</h4>
-2019-04-07      完成
+2018-12-23 完成
 <br>
 <br>
+
+
 
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
