--- a/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
@@ -26,7 +26,41 @@ tags:
 
 ## public
 
-- **exists**: 查看某个key是否存在,存在返回1,不存在返回0.`exists key`
+- **help**: 这个命令很重要,只要你用的好,可以查看所有命令的用法,可以起到一个临时提示的作用,比如这个命令有哪些选项等等. 使用方法: `help`之后根据提示输入:`help command`,即可以查看该命令的详细方法签名.
+
+- **keys**: 使用模式匹配,返回匹配的key,使用`*`进行查看全量的key. 注意:不要在线上使用这个命令,不可控. `keys **`
+
+- **exists**: 查看某个key是否存在,存在返回1,不存在返回0.`exists key`. 
+
+- **scan**: 遍历所有的key,因为做了分页,所以是安全的. `sacn cursor match * count 100`. `*`可以进行模式匹配. `cursor`初次使用为0,之后每一次为上一次`scan`返回的游标.
+
+- **del**: 删除key,可以删除多个. `del key1 key2`
+
+- **expire**: 设置过期时间, `expire key seconds`.
+
+- **ttl**: 查看key的剩余生存时间, `ttl key`
+
+- **pttl**: 以毫秒形式查看key的过期时间, `pttl key`
+
+- **move**: 将当前数据库中的某个key移到新的数据库. `move key db`
+
+- **dump**: 拿到序列化后的value. `dump key`.
+
+- **resotre**: 用上一个命令拿到的值回复某个key.`resotre key seconds 序列化的value`
+
+## DB
+
+这块其实也是public的一部分,我单独将其写出来一下.
+
+- **select**: 选择数据库,默认为16个数据库可以选择.`select index`
+
+- **flushdb**: 删除当前db的所有key. `flushdb`.
+
+- **swapdb**: 交换两个数据库.`swapdb index1 index2`.
+
+- **randomkey**: 在当前库里随机返回一个key. `randomkey`.
+
+- **monitor**: 监视器,可以监视某个redis接受的所有命令.`redis-cli monitor`. 直接在命令行中执行.
 
 ## string
 
