add mysql if case and thrift 手动安装

--- a/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令学习记录.md
@@ -34,6 +34,8 @@ tags:
 
 - **scan**: 遍历所有的key,因为做了分页,所以是安全的. `sacn cursor match * count 100`. `*`可以进行模式匹配. `cursor`初次使用为0,之后每一次为上一次`scan`返回的游标.
 
+- **type**:查看某个key的类型,返回描述.`type key`.
+
 - **del**: 删除key,可以删除多个. `del key1 key2`
 
 - **expire**: 设置过期时间, `expire key seconds`.
