--- a/_posts/开发者工具/快捷键/2019-01-17-终端复用利器-Tmux.md
+++ b/_posts/开发者工具/快捷键/2019-01-17-终端复用利器-Tmux.md
@@ -89,10 +89,30 @@ tmux kill-server # 删除所有的会话
 
 * q 显示所有窗格的序号，在序号出现期间按下对应的数字，即可跳转至对应的窗格
 
-
 ## 效果图
 
 ![](http://img.couplecoders.tech/markdown-img-paste-20190117140430678.png)
+
+## 配置问题
+
+使用iterm2加tmux的时候,你会发现在tmux窗口里面无法使用鼠标滚动窗口内容,具体表现为奇奇怪怪的各种样子.
+
+我搜过好多次了,这次侥幸成功了,记录一下.
+
+在主目录下创建tmux配置文件,`vim ~/.tmux.conf`,并写入`set -g mouse on`.
+
+之后重新加载tmux,`tmux source-file ~/.tmux.conf`.并重新进入tmux.
+
+然后会发现在iterm中无法选中复制了.....
+
+打开配置,勾选下图中的选项.
+
+![2019-04-20-10-03-08](http://img.couplecoders.tech/2019-04-20-10-03-08.png)
+
+OK,done.
+
+tmux的窗口滚动是个玄学.
+
 
 完.
 
@@ -101,7 +121,9 @@ tmux kill-server # 删除所有的会话
 <br>
 <br>
 <h4>ChangeLog</h4>
-2019-01-17      完成
+2019-01-17      完成  
+
+2019-04-20      添加tmux窗口滚动配置
 <br>
 <br>
 
