--- a/2.SEARCH.md
+++ b/2.SEARCH.md
@@ -19,13 +19,13 @@ multilingual: true
 
 <div id="result">
 
-## 方法一
+<h2>方法一</h2>
 
 我自己后端实现的一个搜索.
 
 在上方输入框输入回车即可.
 
-## 方法二
+<h2>方法二</h2>
 
 Jekyll是一个静态博客,最好的方式是使用JS在前端完成搜索.
 <br/>
