--- a/_posts/开发环境/2018-09-05-使用jekyll搭建个人博客.md
+++ b/_posts/开发环境/2018-09-05-使用jekyll搭建个人博客.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-category: 开发环境搭建
+category: [开发环境搭建,Blog,Jekyll]
 tags:
   - 开发环境搭建
   - Blog
+  - Jekyll
 ---
 
 其实蛮纠结这篇文章到底放在哪个分类下呢？**开发环境搭建**？还是**环境搭建**？后面想了一下，写博客总结是和我们日常开发一样重要的任务！也是一种开发，那么博客的搭建自然就算在**开发环境搭建**下面了！  
