--- a/_posts/linux/2019-01-11-linux进价命令.md
+++ b/_posts/linux/2019-01-11-linux进价命令.md
@@ -10,33 +10,40 @@ tags:
 
 sed 是一种在线编辑器，它一次处理一行内容。处理时，把当前处理的行存储在临时缓冲区中，称为“模式空间”（pattern space），接着用sed命令处理缓冲区中的内容，处理完成后，把缓冲区的内容送往屏幕。接着处理下一行，这样不断重复，直到文件末尾。文件内容并没有 改变，除非你使用重定向存储输出。Sed主要用来自动编辑一个或多个文件；简化对文件的反复操作；编写转换程序等。
 
+`sed [OPTION] 'address Command ' file,... 
+# 其中， address用于指定所要操作的行，Command用于指定操作的命令 `
 
-function：
-a ：新增， a 的后面可以接字串，而这些字串会在新的一行出现(目前的下一行)～
-c ：取代， c 的后面可以接字串，这些字串可以取代 n1,n2 之间的行！
-d ：删除，因为是删除啊，所以 d 后面通常不接任何咚咚；
-i ：插入， i 的后面可以接字串，而这些字串会在新的一行出现(目前的上一行)；
-p ：列印，亦即将某个选择的数据印出。通常 p 会与参数 sed -n 一起运行～
-s ：取代，可以直接进行取代的工作哩！通常这个 s 的动作可以搭配正规表示法！例如 1,20s/old/new/g 就是啦！
+#### OPTION
+
+* -n：静默模式，不显示模式空间中的内容
+* -i：直接修改原文件(谨慎使用)
+* -e SCRIPT -e SCRIPT：可以指定同时指定多个脚本
+* -f /PATH/TP/SED_SCRIPT：从文本中加载脚本
+* -r：使用扩展正则表达式
+
+#### address
+
+指定要操作的位置.
+
+`起始行,结束行`.
+
+#### function：
+* a ：新增， a 的后面可以接字串，而这些字串会在新的一行出现(目前的下一行).
+* c ：取代， c 的后面可以接字串，这些字串可以取代 n1,n2 之间的行.
+* d ：删除，因为是删除啊，所以 d 后面通常不接任何东西；
+* i ：插入， i 的后面可以接字串，而这些字串会在新的一行出现(目前的上一行).
+* p ：列印，亦即将某个选择的数据印出。通常 p 会与参数 sed -n 一起运行.
+* s ：取代，可以直接进行取代的工作.通常这个 s 的动作可以搭配正规表示法！例如 `1,20s/old/new/g`.
+
 ### 示例
 
 ```shell
-# 替换
+# 将文件中,三位以上数字,并且后面有逗号的字符串替换为空.例如`2345,`
  sed 's/[0-9][0-9][0-9]\+,//g' k.txt > k6.txt
+# 输出文件的第10000行到20000行到其他文件
+ sed 10000,20000p ha.txt > result.txt
  ```
 
- 我使用这个命令来处理sql,将文件中,三位以上数字,并且后面有逗号的字符串替换为空.例如`2345,`这样,将所有的id去掉.
-
-## wc
-
-统计指定文件中的字节数、字数、行数，并将统计结果显示输出
-
-### 示例
-
-```shell
-# 统计文件有多少行
-wc -l k.txt
-```
 
 ## unip
 
