last week some blog

--- a/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
+++ b/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
@@ -79,6 +79,14 @@ group by substr(from_unixtime(floor(event_timestamp / 1000)),1,10)
 
 直接拿到日期字段。
 
+#### coalesce(...)
+
+这个函数可以由多个参数,作用是返回第一个不为null的值.
+
+![2019-04-27-22-19-59](http://img.couplecoders.tech/2019-04-27-22-19-59.png)
+
+经常使用它的场合是,某个字段的默认值是null,但是你想返回的默认值为0,所有你可以这样写`select coalesce(x.y,0)`,当y字段为null时,会拿到0.
+
 ## 其他函数
 
 <a href="http://www.runoob.com/mysql/mysql-functions.html">菜鸟教程-mysql-函数</a>
