--- a/_posts/database/Redis/2019-04-04-Redis命令全集.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令全集.md
@@ -12,7 +12,7 @@ tags:
 > Redis is an open source (BSD licensed), in-memory data structure store, used as a database, cache and message broker. It supports data structures such as strings, hashes, lists, sets, sorted sets with range queries, bitmaps, hyperloglogs, geospatial indexes with radius queries and streams. Redis has built-in replication, Lua scripting, LRU eviction, transactions and different levels of on-disk persistence, and provides high availability via Redis Sentinel and automatic partitioning with Redis Cluster.
 
 
-总的来说,Redis是一个基于内存的高性能的键值型数据库,也就是常说的NoSQL,可以用来作为数据库或者缓存.并且支持多种数据结构,包括字符串，散列，列表，集合，带有范围查询的排序集，位图，超级日志(直译,具体翻译不确定)，具有半径查询的地理空间索引和流.
+总的来说,Redis是一个基于内存的高性能的键值型数据库,也就是常说的NoSQL,可以用来作为数据库或者缓存.并且支持多种数据结构,包括字符串，散列，列表，集合，带有范围查询的排序集，位图，HyperLogLog，具有半径查询的地理空间索引和流.
 
 各种语言都提供了Redis的客户端,比如Java的`Jedis`和python的`redis-py`.
 
@@ -83,8 +83,6 @@ tags:
 - **setnx**: 是`set if not exists`,当key不存在时写入,存在时不做任何操作.`setnx key value`
 - **getset**: 设置新值并返回旧值.`getset key new_value`
 - **psetex** : 和`setex`相似,区别只是设置的过期时间单位为毫秒.`psetex key ms value`
-
-常用的string相关命令基本都在这里了,剩下一些小对`bit`的操作,暂时没有需要用到的地方,不做学习,等到需要用再添加.
 
 
 ## list
@@ -261,6 +259,15 @@ O(n)的时间复杂度,n是所有set的集合总数.
 - **XGROUP**: 创建,销毁,管理消费者组.也有多个子命令,CREATE,SETID,DESTROY,DELCONSUMER.
 
 ## bitmaps
+
+其实bitmap不是一个实际的数据结构,只是在string数据结构上的一组面向位的操作,因为string数据结构是二进制安全的,所以这个是可行的.
+
+- **SETBIT**: 设置某个key在某个位置的bit值.`SETBIT key offset value`.
+- **GETBIT**: 获取某个key在某个位置的bit值.`GETBIT key offset`.
+
+- **BITCOUNT**: 获取某个范围内bit=1的总数.`BITCOUNT key start end`.
+- **BITPOS**: 获取某个范围内第一个0或者1出现的位置.`BITPOS key 0 1 2`.
+
 
 ## hyperloglogs
 
