--- a/_posts/java/多线程/2019-03-29-用线程池执行定时任务.md
+++ b/_posts/java/多线程/2019-03-29-用线程池执行定时任务.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-category: [Java,多线程,实际问题解决]
+category: [Java,多线程,实际问题解决,java.util.concurrent]
 tags:
   - Java
   - 多线程
   - 实际问题解决
+  - java.util.concurrent
 ---
 
 ## 背景介绍
