add guava collections

--- a/_posts/java/2019-01-20-使用自定义注解实现接口参数校验.md
+++ b/_posts/java/2019-01-20-使用自定义注解实现接口参数校验.md
@@ -81,7 +81,7 @@ Annotation可以像修饰符一样被使用，可以用于package、class、inte
 
 常用的第三方框架实现了非常多的注解,比如`Mybatis`的`Param`,`Spring`的`Component`,`Service`,`fastjson`的`JSONfield`等等.
 
-具体的实现方法这里不多解释了,有兴趣的朋友可以取看一下`fastjson`的源码,该项目相比`spring`等框架,简单一些也更容易理解.
+具体的实现方法这里不多解释了,有兴趣的朋友可以去看一下`fastjson`的源码,该项目相比`spring`等框架,简单一些也更容易理解.
 
 看到这种注解或简单或复杂的功能之后,我们是否也可以自己来动手实现一个呢?
 
