perfect the ThreadPoolExecutor class knowledge

--- a/_drafts/2019-05-01-Mac上的Vim环境搭建.md
+++ b/_drafts/2019-05-01-Mac上的Vim环境搭建.md
@@ -13,7 +13,7 @@ tags:
 
 #### copy到系统剪贴板
 
-中心思想就是替换掉mac自带的vim,然后再copy的时候使用`"+y`来指定copy到系统剪贴板.
+中心思想就是替换掉mac自带的vim,然后在copy的时候使用`"+y`来指定copy到系统剪贴板.
 
 参考这里: https://blog.csdn.net/zhangxiao93/article/details/53677764
 
