--- a/_posts/java/集合/2019-04-27-Java对阻塞队列的实现.md
+++ b/_posts/java/集合/2019-04-27-Java对阻塞队列的实现.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-category: [源码阅读,Java,Java集合,阻塞队列,java.util.concurrent]
+category: [源码阅读,Java,Java集合,阻塞队列,java.util.concurrent,多线程]
 tags:
   - Java
   - 源码阅读
   - Java集合
   - 阻塞队列
   - java.util.concurrent
+  - 多线程
 ---
 
 
@@ -398,7 +399,7 @@ public class BlockingQueueT extends AbstractMain {
 
 # LinkedBlockingQueue
 
-`LinkedBlockingQueue`的实现思路与`ArrayBlockingQueue`基本一致,只是将锁分为了`取出锁`和`插入锁`.当插入和取出数据时,可以分开加锁,互不影响.
+`LinkedBlockingQueue`的实现思路与`ArrayBlockingQueue`基本一致,只是将锁分为了`取出锁`和`插入锁`.当插入和取出数据时,可以分开加锁,互不影响.且它可以是无界的.
 
 
 <br>
