--- a/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
@@ -16,7 +16,15 @@ tags:
 撤回上一次操作 | `u`
 移动到单词末尾 | `e`
 移动到行末 | `$`
+移动到行首 | `0`
 跳转至最后一行 | `G`
+跳转至第一行 | `gg`
+向下/上翻页 | `ctrl + f`/`ctrl + b`
+向下/上翻半页 | `ctrl + d`/`ctrl + u`
+跳转至第多少行 | 数字 + `G`
+百分比跳转  | 直接输入`10%`,`50%`等
+跳转多少行/多少字 | 数字 + `hjkl`
+
 
 
 <br>
