--- a/_posts/database/Redis/2019-04-04-Redis命令全集.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令全集.md
@@ -50,6 +50,8 @@ tags:
 
 - **resotre**: 用上一个命令拿到的值回复某个key.`resotre key seconds 序列化的value`
 
+- **object**: 查看指定key值的内部结构.
+
 ## DB
 
 这块其实也是public的一部分,我单独将其写出来一下.
@@ -133,7 +135,7 @@ tags:
 
 - **SSCAN**: 扫描集合.以较小的代价查找一些元素.`sscan key 0 match o* count 10`.将返回set中以o开头的10个元素,可以继续使用游标来扫描.
 
-- **SDIFF**: 返回第一和集合和其他集合不同的元素.`SDIFF key1 key2 key3`.
+- **SDIFF**: 返回第一个集合和其他集合不同的元素.`SDIFF key1 key2 key3`.
 例如:
 ```
 key1 = {a,b,c,d}
@@ -280,6 +282,18 @@ hyperloglog的原理这里就不讲了,完了多看看之后单独记录一下.
 - **PFMERGE**: 将多个key1的内容合并到一个key中.`PFMERGE target key1 key2`.O(n),n是key的数量.
 ## geospatial index
 
+- **GEOADD**: 想指定的key中添加一个或者多个地理位置,格式为`经度,纬度,名称`.`GEOADD key longitude latitude member [longitude latitude member ...]`
+
+- **GEOHASH**: 返回一个或者多个GEO值的hash.`GEOHASH key member [member ...]`
+
+- **GEOPOS**: 获取某个成员的坐标.`GEOPOS key member [member ...]`
+
+- **GEODIST**: 返回两个成员之间的距离,可以指定多种单位.`GEODIST key member1 member2 [unit]`.
+
+- **GEORADIUS**: 返回指定点为球心,指定距离为半径内的坐标集.`GEORADIUS key longitude latitude radius m|km|ft|mi [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]`
+
+- **GEORADIUSBYMEMBER**: 与上一个命令相似,只是返回的是成员名称.`GEORADIUSBYMEMBER key member radius m|km|ft|mi [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]`.
+
 完。
 
 <br>
@@ -287,7 +301,8 @@ hyperloglog的原理这里就不讲了,完了多看看之后单独记录一下.
 <br>
 <br>
 <h4>ChangeLog</h4>
-2018-04-04 开始连载
+2019-04-04 开始连载
+2019-05-06 完成
 <br>
 <br>
 
