--- a/_posts/java/集合/2019-05-13-Map接口在1.8版本新增的几个方法.md
+++ b/_posts/java/集合/2019-05-13-Map接口在1.8版本新增的几个方法.md
@@ -7,6 +7,24 @@ tags:
   - Java集合
 ---
 
+<!-- TOC -->
+
+- [前言](#前言)
+- [V getOrDefault(Object key, V defaultValue)](#v-getordefaultobject-key-v-defaultvalue)
+- [void replaceAll(BiFunction<? super K, ? super V, ? extends V> function)](#void-replaceallbifunction-super-k--super-v--extends-v-function)
+- [V putIfAbsent(K key, V value)](#v-putifabsentk-key-v-value)
+- [boolean remove(Object key, Object value)](#boolean-removeobject-key-object-value)
+- [replace](#replace)
+    - [default boolean replace(K key, V oldValue, V newValue)](#default-boolean-replacek-key-v-oldvalue-v-newvalue)
+    - [V replace(K key, V value)](#v-replacek-key-v-value)
+- [V computeIfAbsent(K key, Function<? super K, ? extends V> mappingFunction)](#v-computeifabsentk-key-function-super-k--extends-v-mappingfunction)
+- [V computeIfPresent(K key, BiFunction<? super K, ? super V, ? extends V> remappingFunction)](#v-computeifpresentk-key-bifunction-super-k--super-v--extends-v-remappingfunction)
+- [V compute(K key, BiFunction<? super K, ? super V, ? extends V> remappingFunction)](#v-computek-key-bifunction-super-k--super-v--extends-v-remappingfunction)
+- [V merge(K key, V value, BiFunction<? super V, ? super V, ? extends V> remappingFunction)](#v-mergek-key-v-value-bifunction-super-v--super-v--extends-v-remappingfunction)
+- [总结](#总结)
+
+<!-- /TOC -->
+
 ## 前言
 
 Map接口在1.8版本新增以下几个有趣的方法,今天参考源码来学习一下.
