add skip list and concurrentskipListMap的实现

--- a/_posts/开发者工具/快捷键/2019-04-07-VSCode快捷键记录.md
+++ b/_posts/开发者工具/快捷键/2019-04-07-VSCode快捷键记录.md
@@ -6,6 +6,17 @@ tags:
   - 效率编程
 ---
 
+## 目录
+
+- [目录](#目录)
+- [快捷键](#快捷键)
+- [插件安装](#插件安装)
+        - [markdown toc](#markdown-toc)
+        - [settings sync](#settings-sync)
+- [配置项](#配置项)
+        - [配置用户代码段](#配置用户代码段)
+- [参考文章](#参考文章)
+
 ## 快捷键
 
 快捷键 | 作用 | 备注 
@@ -13,8 +24,87 @@ tags:
 `command + opt + s` | 全部保存
 `command + d` | 选中光标所在的单词
 `command + p` | 搜索文件 | 还可以输入`:8`跳转到当前文件的8行
+`command + w` | 关闭当前文件 
 
 
+## 插件安装
+
+#### markdown toc
+
+自动生成md文件的目录,初步测试效果还可以.注意安装后可能会有行尾`auto`的字样,在设置中修改默认的行尾字符为`\n`即可.
+
+#### settings sync
+
+自动在多个设备上同步vs code的设置.
+
+当配置多了之后,换电脑简直是太痛苦了,所以需要这个插件.
+
+按照网上文章进行操作即可.注意:在上传时需要填写的是github上的token,而在下载的时候需要token和gsit,这个值可以在`settings.json`中找到.
+
+## 配置项
+
+#### 配置用户代码段
+
+经常写博客,需要每次写一遍固定代码段,比较烦,想到其他IDE都有代码段功能,因此搜索了一下,配置了一下VScode的代码段功能.
+
+
+首先点击`vs code -> 首选项 -> 用户代码段`,然后选择markdwon.之后在打开的`markdown.json`文件中加入以下内容:
+
+```json
+{
+		"init md":{
+			"prefix": "init",
+			"body": [
+				"---",
+				"layout: post",
+				"category: [Java]",
+				"tags:",
+				"  - Java",
+				"---",
+				"\n",
+				"## 目录",
+				"## 前言",
+				"## 参考文章",
+				"<br>",
+				"完。",
+				"<br>",
+				"<br>",
+				"<br>",
+				"<br>",
+				"<h4>ChangeLog</h4>",
+				"2019-05-19 完成",
+				"<br>",
+				"<br>",
+				"**以上皆为个人所思所得，如有错误欢迎评论区指正。**",
+				"\n",
+				"**欢迎转载，烦请署名并保留原文链接。**",
+				"\n",
+				"**联系邮箱：huyanshi2580@gmail.com**",
+				"\n",
+				"**更多学习笔记见个人博客------><a href=\"{{ site.baseurl }}/\">呼延十</a>**"
+
+			],
+			"description": "wo"
+		}
+}
+```
+
+之后我们预期在md文件中输入`init`会自动联想这段代码,但是不起作用.
+
+因为VS Code 默认是关闭了在`markdown`文件中的智能感知提示的,需要在`settings.json`中打开加入以下内容,以打开该选项.
+
+```json
+ "[markdown]": {
+      "editor.quickSuggestions": true
+  }
+```
+
+完成.愉快的新建文件然后`init`就可以获得一个模板啦.
+
+
+## 参考文章
+
+[vscode的settings sync 插件同步配置](https://www.jianshu.com/p/c10ac793eec0)
 
 <br>
 <br>
