add consistent hash jedis content toc

--- a/_posts/java/2019-05-19-一致性hash算法及其Java实现.md
+++ b/_posts/java/2019-05-19-一致性hash算法及其Java实现.md
@@ -10,6 +10,18 @@ tags:
 
 ## 目录
 
+<!-- TOC -->
+
+- [目录](#目录)
+- [背景](#背景)
+- [分配方法](#分配方法)
+- [一致性hash原理](#一致性hash原理)
+    - [使用虚拟节点解决hash不均匀的问题](#使用虚拟节点解决hash不均匀的问题)
+    - [总结](#总结)
+- [Java实现一致性hash算法缓存客户端](#java实现一致性hash算法缓存客户端)
+
+<!-- /TOC -->
+
 ## 背景
 
 随着业务系统越来越大,我们需要对API的访问进行更多的缓存,使用Redis是一个很好的解决方案.
