some mysql article

--- a/_posts/database/Redis/2019-04-04-Redis命令全集.md
+++ b/_posts/database/Redis/2019-04-04-Redis命令全集.md
@@ -5,6 +5,22 @@ tags:
   - Redis
 ---
 
+## 目录
+
+- [目录](#目录)
+- [背景介绍](#背景介绍)
+- [public](#public)
+- [DB](#db)
+- [string](#string)
+- [list](#list)
+- [sets](#sets)
+- [sorted sets](#sorted-sets)
+- [hashes](#hashes)
+- [streams](#streams)
+- [bitmaps](#bitmaps)
+- [hyperloglogs](#hyperloglogs)
+- [geospatial index](#geospatial-index)
+
 ## 背景介绍
 
 以下摘自:Redis官网.
@@ -51,6 +67,8 @@ tags:
 - **resotre**: 用上一个命令拿到的值回复某个key.`resotre key seconds 序列化的value`
 
 - **object**: 查看指定key值的内部结构.
+
+- **MONITOR**: 可以监控redis服务器,看他处理的每个请求.可以在redis客户端中执行`monitor`,也可以直接在shell种执行:`redis-cli monitor`.
 
 ## DB
 
@@ -293,6 +311,9 @@ hyperloglog的原理这里就不讲了,完了多看看之后单独记录一下.
 - **GEORADIUS**: 返回指定点为球心,指定距离为半径内的坐标集.`GEORADIUS key longitude latitude radius m|km|ft|mi [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]`
 
 - **GEORADIUSBYMEMBER**: 与上一个命令相似,只是返回的是成员名称.`GEORADIUSBYMEMBER key member radius m|km|ft|mi [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]`.
+
+
+
 
 完。
 
