--- a/_posts/database/MySQL/2019-06-01-Mysql索引原理及其优化.md
+++ b/_posts/database/MySQL/2019-06-01-Mysql索引原理及其优化.md
@@ -9,6 +9,7 @@ tags:
 
 ## 目录
 
+
 - [目录](#目录)
 - [前言](#前言)
 - [什么是索引](#什么是索引)
@@ -20,6 +21,7 @@ tags:
 - [怎样创建高性能的索引?](#怎样创建高性能的索引)
     - [前缀索引和索引选择性](#前缀索引和索引选择性)
     - [联合索引](#联合索引)
+        - [最左前缀索引的原理](#最左前缀索引的原理)
     - [聚簇索引](#聚簇索引)
     - [覆盖索引](#覆盖索引)
     - [删除掉冗余和重复的索引](#删除掉冗余和重复的索引)
@@ -28,7 +30,6 @@ tags:
     - [索引大小](#索引大小)
     - [索引碎片](#索引碎片)
 - [参考文章](#参考文章)
-
 
 ## 前言
 
@@ -180,6 +181,24 @@ from
 在不考虑任何查询的情况下,我们应该讲选择性高的列放在联合索引的前面,但是实际上我们更多的是`通过查询来反推索引,以使某个固定的查询可以尽可能的命中索引以提高查询速度`.毕竟我们建立索引的目的也是为了加快查询的速度.
 
 因此联合索引的优化更多的是根据某个或者某些语句来优化的,不具备一个通用的法则.
+
+#### 最左前缀索引的原理
+
+当数据列有序的时候,mysql可以使用索引,那么假设我们建立了`school_age`索引,示例数据如下:
+
+school| age
+--- | ---
+a | 12
+b|12 
+b | 14
+b | 15 
+c | 1
+
+在这份数据中,school字段是完全有序的,索引school可以使用索引.
+
+而从全表来看,age字段不是有序的,因此无法直接使用索引,那么观察一下数据表,在什么时候age有序呢?在school进行定值匹配的时候,例如当`school=b`的时候,对于这三条数据而言,age是有序的,因此可以使用age索引.这就是最左前缀的原理.
+
+此外,最左前缀索引只能使用一个范围查询,例如`select * from user where school > a`, `select * from user where school = a and age > 12`,都是可以命中索引的,但是`select * from user where school > a and age > 12`中,仅school可以命中索引,这也可以从上面得出结论.<font color="red">因为当school是范围匹配的时候,mysql无法确认age字段是否严格有序,比如 school的范围匹配命中了b,c的四条数据,那么age就不是有序的.无法使用后续的索引.</font>
 
 ### 聚簇索引
 
