add tencent info

--- a/_drafts/2019-06-19-对服务熔断和降级的一些思考.md
+++ b/_drafts/2019-06-19-对服务熔断和降级的一些思考.md
@@ -11,7 +11,7 @@ tags:
 
 ## 前言
 
-首先我没有完整的,教科书式的实践过微服务,甚至我都没有弄明白到底怎样算是微服务,只要"我们的系统在有意识的拆分撑"
+首先我没有完整的,教科书式的实践过微服务,甚至我都没有弄明白到底怎样算是微服务,只要"我们的系统在有意识的拆分成独立的小服务",是否就算是微服务呢?
 
 ## 参考文章
 <br>
