--- a/_posts/实际案例/2019-06-21-短URL服务的设计以及实现.md
+++ b/_posts/实际案例/2019-06-21-短URL服务的设计以及实现.md
@@ -230,3 +230,5 @@ public class ShortUrlUtil {
 
 
 **更多学习笔记见个人博客------><a href="{{ site.baseurl }}/">呼延十</a>**
+
+我的博客即将同步至腾讯云+社区，邀请大家一同入驻：https://cloud.tencent.com/developer/support-plan?invite_code=28cw5z9vufvoo
