--- a/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
@@ -26,8 +26,13 @@ tags:
 跳转多少行/多少字 | 数字 + `hjkl`
 选中当前行 | V | 其实是进入行编辑模式,进入会自动选择当前行
 ctrl + v | 块选择,可以用来多行注释和取消注释
-
-
+w | 下一个单词
+b | 上一个单词
+d + G | 删除到文件结束
+d + $ | 删除到行末  | d + 其他东西的操作较多,不再列举.
+cc | 删除当前行并且在当前行进入插入模式.
+ma | 标记此处为a
+`a | 去到a标记那里.
 
 <br>
 完。
