--- a/_posts/开发者工具/快捷键/2019-04-02-Iterm常用快捷键.md
+++ b/_posts/开发者工具/快捷键/2019-04-02-Iterm常用快捷键.md
@@ -29,6 +29,25 @@ Iterm的一些常用快捷键备忘.
 `command + ;` | 列出使用过的命令
 `command + shift + h` | 列出剪贴板历史
 `command + k` | 从当前位置删除到行尾
+`alt + f` | 右移一个单词. | 需要配置
+`alt + b` | 左移一个单词. | 需要配置
+
+
+## 一些配置
+
+### 命令行移动一个单词
+
+这个使用场景主要是在写sql的时候写错了,想回去修改,而错误的地方在中间,使用`ctrl + a`和`ctrl + e` 都还是有点慢的,因此需要使用按照按照单词移动.
+
+在iterm中:
+
+![2019-07-04-11-03-40](http://img.couplecoders.tech/2019-07-04-11-03-40.png)
+
+依次点击1,2,3添加一个键位映射, 其中`actions` 选择`Send Escape Sequence`, 在下方输入f以及b.对应的绑定键位可以自己选择,我绑定的是
+
+`alt + f`,右移一个单词.
+
+`alt + b`,左移一个单词.
 
 
 <br>
