--- a/_posts/杂项/1970-01-01-书单.md
+++ b/_posts/杂项/1970-01-01-书单.md
@@ -15,7 +15,8 @@ tags:
 - [x] lucene实战
 - [ ] 重构 改善既有代码的设计
 - [ ] 深入理解Java虚拟机
-- [ ] Linux&Shell脚本攻略
+- [x] Linux&Shell脚本攻略
+- [x] Redis的设计与实现
 <br>
 完。
 <br>
