--- a/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-常用快捷键记录.md
@@ -7,7 +7,8 @@ tags:
   - 效率编程
 ---
 
-快捷键 | 作用 | 备注
+
+|快捷键 | 作用 | 备注
 --- | --- | ---
 删除当前行 | `dd`
 查找某个内容 | `/content` | 使用`n`下一个,`N`上一个
@@ -37,6 +38,8 @@ ma | 标记此处为a
 { } | 上一个段落和下一个段落
 % | 在成对的括号之间进行移动
 r | re 将当前指针所在的字符替换为e.
+viw | 选中一个单词
+
 <br>
 完。
 
