some modify and resume update

--- a/_posts/database/Redis/2019-09-21-Redis的底层数据结构.md
+++ b/_posts/database/Redis/2019-09-21-Redis的底层数据结构.md
@@ -1,25 +1,23 @@
 ---
 layout: post
-category: [杂项]
+category: [Java]
 tags:
-  - 杂项
+  - Java
 ---
 
 
-记录一下待看以及已看完的书单.
+## 目录
 
-## 2019
 
-- [x] 高性能MySQL
-- [x] Effective Java
-- [x] lucene实战
-- [ ] 重构 改善既有代码的设计
-- [ ] 深入理解Java虚拟机
-- [x] Linux&Shell脚本攻略
-- [x] Redis的设计与实现
-- [x] 编程珠玑
-- [ ] TCP/IP详解
+## 前言
+
+
+## 参考文章
+
+
 <br>
+
+
 完。
 <br>
 <br>
