--- a/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
@@ -32,13 +32,14 @@ b | 上一个单词
 d + G | 删除到文件结束
 d + $ | 删除到行末  | d + 其他东西的操作较多,不再列举.
 cc | 删除当前行并且在当前行进入插入模式.
+C | 清除当前光标之后的内容(本行),进入插入模式
 ma | 标记此处为a
 `a | 去到a标记那里.
 ^ | 移到行首(不包括空格的行首)
 { } | 上一个段落和下一个段落
 % | 在成对的括号之间进行移动
 r | re 将当前指针所在的字符替换为e.
-viw | 选中一个单词
+viw | 选中一个单词(TextObject)
 
 <br>
 完。
