--- a/_posts/数据结构和算法/二叉树/2018-11-04-二叉树介绍及其前中后遍历实现.md
+++ b/_posts/数据结构和算法/二叉树/2018-11-04-二叉树介绍及其前中后遍历实现.md
@@ -231,7 +231,7 @@ private List<Integer> inOrderTraversal2() {
 }
 ```
 
-非递归实现的中序遍历思想：首先找到二叉树最左下角的节点，即从根节点一直沿着左孩子向前走，知道某一节点没有左孩子，然后将该节点添加到结果列表，继续以相同的思路遍历该节点的右孩子。之后会退一个节点，执行相同的操作，由于二叉树的实现中，节点并不保存父节点的信息，所以也需要借助栈来保存回退的信息。
+非递归实现的中序遍历思想：首先找到二叉树最左下角的节点，即从根节点一直沿着左孩子向前走，直到某一节点没有左孩子，然后将该节点添加到结果列表，继续以相同的思路遍历该节点的右孩子。之后会退一个节点，执行相同的操作，由于二叉树的实现中，节点并不保存父节点的信息，所以也需要借助栈来保存回退的信息。
 
 具体的思路不再讲解，如果不很理解可以照着代码写一遍前序遍历中那种繁琐的流程就懂了。
 
