add weinxin public

--- a/_posts/database/Redis/2019-09-21-Redis的底层数据结构.md
+++ b/_posts/database/Redis/2019-09-21-Redis的底层数据结构.md
@@ -29,6 +29,9 @@ tags:
 <br>
 
 
+![](http://img.couplecoders.tech/%E6%89%AB%E7%A0%81_%E6%90%9C%E7%B4%A2%E8%81%94%E5%90%88%E4%BC%A0%E6%92%AD%E6%A0%B7%E5%BC%8F-%E6%A0%87%E5%87%86%E8%89%B2%E7%89%88.png)
+
+
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
 
 
@@ -38,4 +41,4 @@ tags:
 **联系邮箱：huyanshi2580@gmail.com**
 
 
-**更多学习笔记见个人博客------><a href="{{ site.baseurl }}/">呼延十</a>**
+**更多学习笔记见个人博客或关注微信公众号<呼延十>------><a href="{{ site.baseurl }}/">呼延十</a>**
