--- a/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
@@ -40,6 +40,12 @@ ma | 标记此处为a
 % | 在成对的括号之间进行移动
 r | re 将当前指针所在的字符替换为e.
 viw | 选中一个单词(TextObject)
+ciw | 删除一个单词 (以及其他的TextObject操作)
+`. | 跳转到最后一次编辑的地方. | . 这个mark代表了最后一次编辑
+'. | 跳转到最后一次编辑的那一行
+g; g, | 可以在changelist来回跳转 (就是在你编辑过的地方来回跳转)
+
+
 
 <br>
 完。
